--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>My Blog</title>
+    <title>{{site.siteTitle}}</title>
   </head>
-  <body>
+  <body class="p-{{pageClass}}">
     <nav>
         <ul>
           {% for page in collections.page %}
-          <li>{{ page.data.navTitle }}</li>
+          <li class="t-{{page.data.pageClass}}">
+            <a href="{{ page.url }}">
+            {{ page.data.navTitle }}
+            </a>
+          </li>
           {% endfor %}
         </ul>
     </nav>
@@ -18,5 +22,6 @@
       <h1>{{ pageTitle }}</h1>
       {{ content }}
     </main>
+    <script src="/js/scripts.js"></script>
   </body>
 </html>
